# toy-compiler

./: CMakeLists.txt  Makefile  README.md  test_python.py
include/: CMakeLists.txt
include/ourlang-c/Dialect/: Custom.h
include/ourlang/Dialect/Custom/IR/: CMakeLists.txt  CustomDialect.h  CustomDialect.td  CustomOps.h  CustomOps.td  CustomTypes.h  CustomTypes.td
lib/CAPI/Dialect/: CMakeLists.txt  Custom.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Custom/IR/: CMakeLists.txt  CustomDialect.cpp  CustomOps.cpp
python/: CMakeLists.txt  CustomModule.cpp  DialectModules.h  OurlangModule.cpp
python/ourlang/: __init__.py
python/ourlang/dialects/: CMakeLists.txt  CustomOps.td  custom.py
